[gd_scene load_steps=3 format=3 uid="uid://bmyklmw3056p"]

[ext_resource type="Script" path="res://test/object_card.gd" id="1_to1ye"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mytn0"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.145098, 0.168627, 0.203922, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="ObjectCard" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -735.0
offset_bottom = -500.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mytn0")
script = ExtResource("1_to1ye")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[node name="IdLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.6)

[node name="DataLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.6)
text_overrun_behavior = 3
